<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.project.hackathon.motorola.ultrasonic_app.InsertSpaceActivity"
    tools:showIn="@layout/activity_insert_space">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/title_insert"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/input_position1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_position1"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_marginLeft="10dp"
                android:id="@+id/iv_position1"
                android:layout_width="60dp"
                android:layout_height="60dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/input_position2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_position2"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_marginLeft="10dp"
                android:id="@+id/iv_position2"
                android:layout_width="60dp"
                android:layout_height="60dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/input_position3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_position3"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_marginLeft="10dp"
                android:id="@+id/iv_position3"
                android:layout_width="60dp"
                android:layout_height="60dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/input_position4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_position4"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_marginLeft="10dp"
                android:id="@+id/iv_position4"
                android:layout_width="60dp"
                android:layout_height="60dp" />

        </LinearLayout>

        <Button
            android:layout_margin="10dp"
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/text_button_add"
            android:textColor="@color/text_default_color"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_pass"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/text_example1"
            android:textAlignment="center"
            android:textColor="@color/text_default_color" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>